languages/io-automaton-fe/src/test/resources/valid/symtab/ForSimpleSymTabTest2.ioautomaton
package valid.symtab;

automaton ForSimpleSymTabTest2{	
	state S1, S2;
	initial S1;
}