languages/io-automaton-fe/src/test/resources/invalid/AutomatonWithoutAction.ioautomaton
package invalid;

automaton AutomatonWithoutAction {

    input int i;

	state Idle;	
	initial Idle;
	
	Idle;		
}